--- a/aspnet-core/src/GYISMS.Web.Host/wwwroot/gyadmin/index.html
+++ b/aspnet-core/src/GYISMS.Web.Host/wwwroot/gyadmin/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>广元烟草信息化平台</title>
-        <base href="/">
+        <base href="/gyadmin/">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,7 +104,7 @@
                 animation: lol 3s .5s infinite ease-in-out
             }
         </style>
-    </head>
+    <link rel="stylesheet" href="styles.9d746a7fce526d48f680.css"></head>
 
     <body>
         <app-root></app-root>
@@ -120,6 +120,6 @@
                 </div>
             </div>
         </div>
-    </body>
+    <script type="text/javascript" src="runtime.8195a6ac0deae3a9c1bf.js"></script><script type="text/javascript" src="polyfills.8d64cb50b44ad13d1e31.js"></script><script type="text/javascript" src="scripts.c3b33df2edbda5232a9f.js"></script><script type="text/javascript" src="main.f1e840d0719b37b49789.js"></script></body>
 
 </html>
