--- a/ng-admin/src/index.html
+++ b/ng-admin/src/index.html
@@ -11,13 +11,17 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <style type="text/css">
             .preloader {
+                background-image: url('assets/bg.svg');
+                background-repeat: no-repeat;
+                background-position: center 110px;
+                background-size: 100%;
                 position: fixed;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
                 overflow: hidden;
-                background: #49a9ee;
+                background: #fff;
                 z-index: 9999;
                 transition: opacity .65s
             }
@@ -110,15 +114,19 @@
         <app-root></app-root>
         <div class="preloader">
             <div class="cs-loader">
+                <!--<div class="cs-loader-inner">
+                    <label> ●</label>
+                    <label> ●</label>
+                    <label> ●</label>
+                    <label> ●</label>
+                    <label> ●</label>
+                    <label> ●</label>
+                </div>-->
                 <div class="cs-loader-inner">
-                    <label> ●</label>
-                    <label> ●</label>
-                    <label> ●</label>
-                    <label> ●</label>
-                    <label> ●</label>
-                    <label> ●</label>
+                    <img class="logo" width="150px" src="assets/images/loading001.gif">
                 </div>
             </div>
+        </div>
         </div>
     </body>
 
