--- a/ng-admin/src/index.html
+++ b/ng-admin/src/index.html
@@ -107,6 +107,15 @@
             .cs-loader-inner label:nth-child(1) {
                 animation: lol 3s .5s infinite ease-in-out
             }
+
+            .title {
+                font-size: 14px;
+                color: gray;
+                font-family: 'Myriad Pro', 'Helvetica Neue', Arial, 'Microsoft Yahei', Helvetica, sans-serif;
+                font-weight: 400;
+                position: relative;
+                vertical-align: middle;
+            }
         </style>
     </head>
 
@@ -123,7 +132,8 @@
                     <label> ●</label>
                 </div>-->
                 <div class="cs-loader-inner">
-                    <img class="logo" width="150px" src="assets/images/loading001.gif">
+                    <img class="logo" width="150px" src="assets/images/loading001.gif"><br />
+                    <span class="title">玩命加载中....</span>
                 </div>
             </div>
         </div>
